persist .nuxt folder, so we can run tests in next step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
             - cypress
             - cypress.config.ts
             - nuxt.config.ts
+            - .nuxt
             - tsconfig.json
             - src
             - test
