--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,43 @@ node_modules
 .output
 .env
 dist
+coverage/base.css
+coverage/block-navigation.js
+coverage/clover.xml
+coverage/coverage-final.json
+coverage/favicon.png
+coverage/index.html
+coverage/prettify.css
+coverage/prettify.js
+coverage/sort-arrow-sprite.png
+coverage/sorter.js
+coverage/tmp/coverage-9934-1669097515867-15.json
+coverage/tmp/coverage-9934-1669097515940-14.json
+coverage/tmp/coverage-9934-1669097516000-13.json
+coverage/tmp/coverage-9934-1669097516065-5.json
+coverage/tmp/coverage-9934-1669097516150-9.json
+coverage/tmp/coverage-9934-1669097516271-4.json
+coverage/tmp/coverage-9934-1669097516345-11.json
+coverage/tmp/coverage-9934-1669097516423-8.json
+coverage/tmp/coverage-9934-1669097516504-7.json
+coverage/tmp/coverage-9934-1669097516578-16.json
+coverage/tmp/coverage-9934-1669097516653-3.json
+coverage/tmp/coverage-9934-1669097516732-2.json
+coverage/tmp/coverage-9934-1669097516801-10.json
+coverage/tmp/coverage-9934-1669097516868-12.json
+coverage/tmp/coverage-9934-1669097516936-6.json
+coverage/tmp/coverage-6394-1669142339493-16.json
+coverage/tmp/coverage-6394-1669142339588-15.json
+coverage/tmp/coverage-6394-1669142339684-14.json
+coverage/tmp/coverage-6394-1669142339762-13.json
+coverage/tmp/coverage-6394-1669142339849-12.json
+coverage/tmp/coverage-6394-1669142339936-11.json
+coverage/tmp/coverage-6394-1669142340035-8.json
+coverage/tmp/coverage-6394-1669142340129-7.json
+coverage/tmp/coverage-6394-1669142340241-5.json
+coverage/tmp/coverage-6394-1669142340330-9.json
+coverage/tmp/coverage-6394-1669142340421-6.json
+coverage/tmp/coverage-6394-1669142340509-10.json
+coverage/tmp/coverage-6394-1669142340600-4.json
+coverage/tmp/coverage-6394-1669142340695-2.json
+coverage/tmp/coverage-6394-1669142340788-3.json
