--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   node: circleci/node@5.0.3
-  slack: circleci/slack@4.10.1
+  slack: circleci/slack@4.12.0
 
 executors:
   pnpm-executor:
@@ -34,7 +34,7 @@ jobs:
             - pnpm-lock.yaml
             - node_modules
             - cypress
-            - cypress.config.js
+            - cypress.config.ts
             - nuxt.config.ts
             - .nuxt
             - tsconfig.json
