--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.6",
-    "@vueuse/nuxt": "^9.6.0",
+    "@vueuse/nuxt": "^9.7.0",
     "animate.css": "^4.1.1",
     "nuxt-lazy-hydrate": "^0.1.0",
     "vee-validate": "^4.7.3",
@@ -28,22 +28,22 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.33.1",
-    "@nuxt/content": "^2.2.2",
+    "@antfu/eslint-config": "^0.34.0",
+    "@nuxt/content": "^2.3.0",
     "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
-    "@nuxt/test-utils-edge": "3.0.1-rc.0-27845213.4641e8e",
+    "@nuxt/test-utils": "^3.0.0",
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/i18n": "8.0.0-beta.7",
     "@nuxtjs/tailwindcss": "^6.1.3",
-    "@vitest/coverage-c8": "^0.25.7",
-    "cypress": "^12.0.2",
+    "@vitest/coverage-c8": "^0.25.8",
+    "cypress": "^12.1.0",
     "dayjs": "^1.11.7",
     "jsdom": "^20.0.3",
     "nuxt": "^3.0.0",
     "nuxt-icon": "^0.1.8",
     "sitemap": "^7.1.1",
     "start-server-and-test": "^1.15.2",
-    "vitest": "^0.25.7"
+    "vitest": "^0.25.8"
   },
   "eslintConfig": {
     "extends": "@antfu"
