--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "harmonics",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --open",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "serve": "nuxt generate && serve dist",
@@ -15,12 +15,12 @@
     "cy:run": "cypress run",
     "cy:dev": "start-server-and-test dev http://localhost:3000 'cypress open --config baseUrl=http://localhost:3000'",
     "cy:local": "start-server-and-test serve http://localhost:3000 'cypress run --config baseUrl=http://localhost:3000'",
-    "fulltest": "rm -rf node_modules && pnpm i && pnpm run coverage && pnpm run cy:local"
+    "fulltest": "rm -rf node_modules && pnpm i --shamefully-hoist && pnpm run coverage && pnpm run cy:local"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.6",
-    "@vueuse/nuxt": "^9.7.0",
+    "@vueuse/nuxt": "^9.9.0",
     "animate.css": "^4.1.1",
     "nuxt-lazy-hydrate": "^0.1.0",
     "vee-validate": "^4.7.3",
@@ -32,18 +32,18 @@
     "@nuxt/content": "^2.3.0",
     "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
     "@nuxt/test-utils": "^3.0.0",
-    "@nuxtjs/google-fonts": "^3.0.0-1",
+    "@nuxtjs/google-fonts": "3.0.0-1",
     "@nuxtjs/i18n": "8.0.0-beta.7",
-    "@nuxtjs/tailwindcss": "^6.1.3",
-    "@vitest/coverage-c8": "^0.25.8",
-    "cypress": "^12.1.0",
+    "@nuxtjs/tailwindcss": "^6.2.0",
+    "@vitest/coverage-c8": "^0.26.2",
+    "cypress": "^12.2.0",
     "dayjs": "^1.11.7",
     "jsdom": "^20.0.3",
     "nuxt": "^3.0.0",
     "nuxt-icon": "^0.1.8",
     "sitemap": "^7.1.1",
     "start-server-and-test": "^1.15.2",
-    "vitest": "^0.25.8"
+    "vitest": "^0.26.2"
   },
   "eslintConfig": {
     "extends": "@antfu"
