--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,12 @@
 version: 2.1
 
 orbs:
-  node: circleci/node@5.0.3
-  slack: circleci/slack@4.12.0
+  slack: circleci/slack@4.12.1
 
 executors:
   pnpm-executor:
     docker:
-      - image: vernaillen/circleci-pnpm:19.3.0-browsers
+      - image: vernaillen/circleci-pnpm:19.4.0-browsers
     working_directory: /tmp/workspace
 
 jobs:
@@ -91,3 +90,5 @@ workflows:
               only: master
           context: 
             - Slack
+
+# VS Code Extension Version: 1.5.1
