--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
     "cy:dev": "start-server-and-test dev http://localhost:3000 'cypress open --config baseUrl=http://localhost:3000'",
     "cy:local": "start-server-and-test serve http://localhost:3000 'cypress run --config baseUrl=http://localhost:3000'",
     "fulltest": "rm -rf node_modules && pnpm i --shamefully-hoist && pnpm run coverage && pnpm run cy:local",
-    "release": "release-it --ci"
+    "release": "release-it"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.6",
-    "@vueuse/nuxt": "^9.11.1",
+    "@vueuse/core": "^9.12.0",
     "animate.css": "^4.1.1",
+    "simple-git": "^3.16.0",
     "vee-validate": "^4.7.3",
     "vue-easy-lightbox": "^1.11.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.34.1",
+    "@antfu/eslint-config": "^0.35.0",
     "@nuxt/content": "^2.4.2",
     "@nuxt/image-edge": "1.0.0-27913696.5d122a3",
     "@nuxt/test-utils": "^3.1.1",
@@ -37,6 +38,7 @@
     "@nuxtjs/plausible": "^0.2.0",
     "@nuxtjs/tailwindcss": "^6.3.0",
     "@vitest/coverage-c8": "^0.28.3",
+    "@vueuse/nuxt": "^9.12.0",
     "cypress": "^12.4.1",
     "dayjs": "^1.11.7",
     "jsdom": "^21.1.0",
