--- a/package.json
+++ b/package.json
@@ -27,20 +27,21 @@
     "simple-git": "^3.16.0",
     "vee-validate": "^4.7.3",
     "vue-easy-lightbox": "^1.11.0",
+    "vue-gtag": "^2.0.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.1",
-    "@nuxt/content": "^2.4.2",
-    "@nuxt/image-edge": "1.0.0-27913696.5d122a3",
+    "@nuxt/content": "^2.4.3",
+    "@nuxt/image-edge": "1.0.0-27919678.2f5b64b",
     "@nuxt/test-utils": "^3.1.1",
     "@nuxtjs/google-fonts": "3.0.0-1",
     "@nuxtjs/i18n": "8.0.0-beta.9",
     "@nuxtjs/plausible": "^0.2.0",
-    "@nuxtjs/tailwindcss": "^6.3.0",
+    "@nuxtjs/tailwindcss": "^6.3.1",
     "@vitest/coverage-c8": "^0.28.3",
     "@vueuse/nuxt": "^9.12.0",
-    "cypress": "^12.4.1",
+    "cypress": "^12.5.0",
     "dayjs": "^1.11.7",
     "jsdom": "^21.1.0",
     "nuxt": "^3.1.1",
