--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@mollie/api-client": "^3.6.0",
+    "@netlify/emails": "^1.0.0",
     "@netlify/functions": "^1.4.0",
     "@netlify/plugin-emails": "^1.0.0",
     "@nuxtjs/axios": "^5.13.6",
