--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "cy:dev": "start-server-and-test dev http://localhost:3000 'cypress open --config baseUrl=http://localhost:3000'",
     "cy:local": "start-server-and-test serve http://localhost:3000 'cypress run --config baseUrl=http://localhost:3000'",
     "fulltest": "rm -rf node_modules && pnpm i --shamefully-hoist && pnpm run coverage && pnpm run cy:local",
-    "release:patch": "release-it patch --ci",
-    "release:minor": "release-it minor --ci",
-    "release:major": "release-it major --ci"
+    "release:patch": "pnpm run fulltest && release-it patch --ci",
+    "release:minor": "pnpm run fulltest && release-it minor --ci",
+    "release:major": "pnpm run fulltest && release-it major --ci"
   },
   "dependencies": {
     "@mollie/api-client": "^3.6.0",
@@ -33,17 +33,17 @@
     "yup": "^1.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.35.2",
+    "@antfu/eslint-config": "^0.35.3",
     "@nuxt/content": "^2.4.3",
-    "@nuxt/image-edge": "1.0.0-27952794.567c688",
+    "@nuxt/image-edge": "1.0.0-27954023.4cee565",
     "@nuxt/test-utils": "^3.2.2",
     "@nuxtjs/google-fonts": "3.0.0-1",
     "@nuxtjs/i18n": "8.0.0-beta.9",
     "@nuxtjs/supabase": "^0.3.1",
     "@nuxtjs/tailwindcss": "^6.4.1",
-    "@vitest/coverage-c8": "^0.28.5",
+    "@vitest/coverage-c8": "^0.29.1",
     "@vueuse/nuxt": "^9.13.0",
-    "cypress": "^12.6.0",
+    "cypress": "^12.7.0",
     "dayjs": "^1.11.7",
     "jsdom": "^21.1.0",
     "nuxt": "^3.2.2",
@@ -53,7 +53,7 @@
     "remark-directive-rehype": "^0.4.2",
     "sitemap": "^7.1.1",
     "start-server-and-test": "^1.15.4",
-    "vitest": "^0.28.5"
+    "vitest": "^0.29.1"
   },
   "eslintConfig": {
     "extends": "@antfu"
