--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@pinia/nuxt": "^0.4.7",
     "@sendgrid/mail": "^7.7.0",
     "@vueuse/core": "^9.13.0",
+    "animate.css": "^4.1.1",
     "simple-git": "^3.16.1",
     "vee-validate": "^4.7.4",
     "vue-easy-lightbox": "^1.14.0",
