--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "release:major": "pnpm run fulltest && release-it major --ci"
   },
   "dependencies": {
-    "@mollie/api-client": "^3.6.0",
+    "@mollie/api-client": "^3.7.0",
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.7",
     "@sendgrid/mail": "^7.7.0",
@@ -34,11 +34,11 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.35.3",
-    "@nuxt/content": "^2.4.3",
-    "@nuxt/image-edge": "1.0.0-27954023.4cee565",
+    "@antfu/eslint-config": "^0.36.0",
+    "@nuxt/content": "^2.5.2",
+    "@nuxt/image-edge": "1.0.0-27968280.9739e4d",
     "@nuxt/test-utils": "^3.2.3",
-    "@nuxtjs/google-fonts": "3.0.0-1",
+    "@nuxtjs/google-fonts": "3.0.0",
     "@nuxtjs/i18n": "8.0.0-beta.9",
     "@nuxtjs/supabase": "^0.3.1",
     "@nuxtjs/tailwindcss": "^6.4.1",
@@ -49,7 +49,7 @@
     "jsdom": "^21.1.0",
     "nuxt": "^3.2.3",
     "nuxt-icon": "^0.3.2",
-    "release-it": "^15.7.0",
+    "release-it": "^15.8.0",
     "remark-breaks": "^3.0.2",
     "remark-directive-rehype": "^0.4.2",
     "sitemap": "^7.1.1",
