--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@vueuse/core": "^9.13.0",
     "animate.css": "^4.1.1",
     "simple-git": "^3.17.0",
-    "vee-validate": "^4.7.4",
+    "vee-validate": "^4.8.1",
     "vue-easy-lightbox": "^1.14.0",
     "vue-gtag": "^2.0.1",
     "yup": "^1.0.2"
@@ -37,17 +37,17 @@
     "@antfu/eslint-config": "^0.36.0",
     "@nuxt/content": "^2.5.2",
     "@nuxt/image-edge": "1.0.0-27968280.9739e4d",
-    "@nuxt/test-utils": "^3.2.3",
+    "@nuxt/test-utils": "^3.3.1",
     "@nuxtjs/google-fonts": "3.0.0",
     "@nuxtjs/i18n": "8.0.0-beta.9",
     "@nuxtjs/supabase": "^0.3.1",
-    "@nuxtjs/tailwindcss": "^6.4.1",
+    "@nuxtjs/tailwindcss": "^6.5.0",
     "@vitest/coverage-c8": "^0.29.2",
     "@vueuse/nuxt": "^9.13.0",
     "cypress": "^12.7.0",
     "dayjs": "^1.11.7",
-    "jsdom": "^21.1.0",
-    "nuxt": "^3.2.3",
+    "jsdom": "^21.1.1",
+    "nuxt": "3.3.1",
     "nuxt-icon": "^0.3.2",
     "release-it": "^15.8.0",
     "remark-breaks": "^3.0.2",
