--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --open",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "serve": "nuxt generate && serve dist",
+    "serve": "nuxt build && node .output/server/index.mjs",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "cy:install": "cypress install",
@@ -15,7 +15,9 @@
     "cy:run": "cypress run",
     "cy:dev": "start-server-and-test dev http://localhost:3000 'cypress open --config baseUrl=http://localhost:3000'",
     "cy:local": "start-server-and-test serve http://localhost:3000 'cypress run --config baseUrl=http://localhost:3000'",
-    "fulltest": "rm -rf node_modules && pnpm i --shamefully-hoist && pnpm run coverage && pnpm run cy:local",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "fulltest": "rm -rf node_modules && pnpm i --shamefully-hoist && pnpm lint && pnpm run coverage && pnpm run cy:local",
     "release:patch": "pnpm run fulltest && release-it patch --ci",
     "release:minor": "pnpm run fulltest && release-it minor --ci",
     "release:major": "pnpm run fulltest && release-it major --ci"
@@ -28,7 +30,7 @@
     "@vueuse/core": "^9.13.0",
     "animate.css": "^4.1.1",
     "simple-git": "^3.17.0",
-    "vee-validate": "^4.8.2",
+    "vee-validate": "^4.8.3",
     "vue-easy-lightbox": "^1.14.0",
     "vue-gtag": "^2.0.1",
     "yup": "^1.0.2"
@@ -42,19 +44,23 @@
     "@nuxtjs/i18n": "8.0.0-beta.9",
     "@nuxtjs/supabase": "^0.3.1",
     "@nuxtjs/tailwindcss": "^6.6.0",
-    "@vitest/coverage-c8": "^0.29.2",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "@vitest/coverage-c8": "^0.29.3",
     "@vueuse/nuxt": "^9.13.0",
-    "cypress": "^12.8.0",
+    "cypress": "^12.8.1",
     "dayjs": "^1.11.7",
+    "eslint": "^8.36.0",
     "jsdom": "^21.1.1",
     "nuxt": "3.3.1",
     "nuxt-icon": "^0.3.3",
-    "release-it": "^15.8.0",
+    "release-it": "^15.9.0",
     "remark-breaks": "^3.0.2",
     "remark-directive-rehype": "^0.4.2",
     "sitemap": "^7.1.1",
     "start-server-and-test": "^2.0.0",
-    "vitest": "^0.29.2"
+    "typescript": "^5.0.2",
+    "vitest": "^0.29.3"
   },
   "eslintConfig": {
     "extends": "@antfu"
