persist .git to ci workspace for sonar scan

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
             - test
             - dist
             - .gitignore
+            - .git
             - sonar-project.properties
       - slack/notify:
           channel: circleci
