--- a/package.json
+++ b/package.json
@@ -32,35 +32,35 @@
     "simple-git": "^3.17.0",
     "vee-validate": "^4.8.3",
     "vue-easy-lightbox": "^1.15.0",
-    "vue-gtag": "^2.0.1",
     "yup": "^1.0.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.37.0",
     "@nuxt/content": "^2.5.2",
-    "@nuxt/image-edge": "1.0.0-27968280.9739e4d",
+    "@nuxt/image-edge": "1.0.0-27991759.1a5eea1",
     "@nuxt/test-utils": "^3.3.1",
     "@nuxtjs/google-fonts": "3.0.0",
     "@nuxtjs/i18n-edge": "8.0.0-beta.10-27985006.4ff543e",
     "@nuxtjs/supabase": "^0.3.1",
-    "@nuxtjs/tailwindcss": "^6.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "@vitest/coverage-c8": "^0.29.3",
+    "@nuxtjs/tailwindcss": "^6.6.4",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "@vitest/coverage-c8": "^0.29.7",
     "@vueuse/nuxt": "^9.13.0",
     "cypress": "^12.8.1",
     "dayjs": "^1.11.7",
     "eslint": "^8.36.0",
     "jsdom": "^21.1.1",
     "nuxt": "3.3.1",
+    "nuxt-gtag": "^0.3.0",
     "nuxt-icon": "^0.3.3",
-    "release-it": "^15.9.0",
+    "release-it": "^15.9.1",
     "remark-breaks": "^3.0.2",
     "remark-directive-rehype": "^0.4.2",
     "sitemap": "^7.1.1",
     "start-server-and-test": "^2.0.0",
     "typescript": "^5.0.2",
-    "vitest": "^0.29.3"
+    "vitest": "^0.29.7"
   },
   "eslintConfig": {
     "extends": "@antfu"
