nuxt 3.3.2 + back to node 19

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
   "vite.open": true,
   "vite.port": 3000,
   "vite.devCommand": "pnpm run dev",
-  "vite.buildCommand": "pnpm run build"
+  "vite.buildCommand": "pnpm run build",
+  "githubPullRequests.ignoredPullRequestBranches": [
+    "master"
+  ]
 }
