replace gtag with plausible

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nuxt/test-utils": "^3.3.2",
     "@nuxtjs/google-fonts": "3.0.0",
     "@nuxtjs/i18n-edge": "8.0.0-beta.10-27995650.c1d4ec9",
+    "@nuxtjs/plausible": "^0.2.0",
     "@nuxtjs/supabase": "^0.3.1",
     "@nuxtjs/tailwindcss": "^6.6.4",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
@@ -52,7 +53,6 @@
     "eslint": "^8.36.0",
     "jsdom": "^21.1.1",
     "nuxt": "3.3.2",
-    "nuxt-gtag": "^0.3.0",
     "nuxt-icon": "^0.3.3",
     "release-it": "^15.9.3",
     "remark-breaks": "^3.0.2",
