--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "harmonics",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "serve": "nuxt build && node .output/server/index.mjs",
+    "serve": "nuxt build && NODE_ENV=production node .output/server/index.mjs",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "cy:install": "cypress install",
@@ -17,10 +17,7 @@
     "cy:local": "start-server-and-test serve http://localhost:3000 'cypress run --config baseUrl=http://localhost:3000'",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "fulltest": "rm -rf node_modules && pnpm i --shamefully-hoist && pnpm lint && pnpm run coverage && pnpm run cy:local",
-    "release:patch": "pnpm run fulltest && release-it patch --ci",
-    "release:minor": "pnpm run fulltest && release-it minor --ci",
-    "release:major": "pnpm run fulltest && release-it major --ci"
+    "fulltest": "rm -rf node_modules && pnpm i --shamefully-hoist && pnpm lint && pnpm run coverage && pnpm run cy:local"
   },
   "dependencies": {
     "@mollie/api-client": "^3.7.0",
@@ -42,7 +39,7 @@
     "@nuxtjs/google-fonts": "3.0.0",
     "@nuxtjs/i18n-edge": "8.0.0-beta.10-28003311.2c39470",
     "@nuxtjs/plausible": "^0.2.0",
-    "@nuxtjs/supabase": "^0.3.1",
+    "@nuxtjs/supabase": "0.3.1",
     "@nuxtjs/tailwindcss": "^6.6.5",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
@@ -54,7 +51,6 @@
     "jsdom": "^21.1.1",
     "nuxt": "3.3.2",
     "nuxt-icon": "^0.3.3",
-    "release-it": "^15.9.3",
     "remark-breaks": "^3.0.2",
     "remark-directive-rehype": "^0.4.2",
     "sitemap": "^7.1.1",
@@ -64,19 +60,5 @@
   },
   "eslintConfig": {
     "extends": "@antfu"
-  },
-  "release-it": {
-    "git": {
-      "commit": true,
-      "tag": true,
-      "push": true,
-      "commitMessage": "chore: release v${version}"
-    },
-    "github": {
-      "release": false
-    },
-    "npm": {
-      "publish": false
-    }
   }
 }
