--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "@typescript-eslint/parser": "^5.58.0",
     "@vitest/coverage-c8": "^0.30.0",
     "@vueuse/nuxt": "^9.13.0",
+    "consola": "^3.0.1",
     "cypress": "^12.9.0",
     "dayjs": "^1.11.7",
     "eslint": "^8.38.0",
     "jsdom": "^21.1.1",
-    "nuxt": "3.3.3",
+    "nuxt": "3.4.0",
     "nuxt-icon": "^0.3.3",
     "remark-breaks": "^3.0.2",
     "remark-directive-rehype": "^0.4.2",
