--- a/package.json
+++ b/package.json
@@ -29,28 +29,29 @@
     "simple-git": "^3.17.0",
     "vee-validate": "^4.8.4",
     "vue-easy-lightbox": "^1.15.0",
-    "yup": "^1.0.2"
+    "yup": "^1.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.4",
     "@nuxt/content": "^2.5.2",
+    "@nuxt/devtools": "^0.4.0",
     "@nuxt/image-edge": "1.0.0-28020728.5df24eb",
-    "@nuxt/test-utils": "^3.3.3",
+    "@nuxt/test-utils": "^3.4.1",
     "@nuxtjs/google-fonts": "3.0.0",
-    "@nuxtjs/i18n-edge": "8.0.0-beta.10-28003311.2c39470",
+    "@nuxtjs/i18n": "8.0.0-beta.11",
     "@nuxtjs/plausible": "^0.2.0",
     "@nuxtjs/supabase": "0.3.5",
-    "@nuxtjs/tailwindcss": "^6.6.5",
+    "@nuxtjs/tailwindcss": "^6.6.6",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "@vitest/coverage-c8": "^0.30.0",
     "@vueuse/nuxt": "^9.13.0",
-    "consola": "^3.0.1",
+    "consola": "^3.0.2",
     "cypress": "^12.9.0",
     "dayjs": "^1.11.7",
     "eslint": "^8.38.0",
     "jsdom": "^21.1.1",
-    "nuxt": "3.4.0",
+    "nuxt": "3.4.1",
     "nuxt-icon": "^0.3.3",
     "remark-breaks": "^3.0.2",
     "remark-directive-rehype": "^0.4.2",
