--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.8",
     "@sendgrid/mail": "^7.7.0",
-    "@vueuse/core": "^10.0.0",
+    "@vueuse/core": "^10.0.2",
     "animate.css": "^4.1.1",
+    "iframe-resizer": "^4.3.6",
     "simple-git": "^3.17.0",
-    "vee-validate": "^4.8.4",
-    "vue-easy-lightbox": "^1.15.0",
-    "yup": "^1.1.0"
+    "vee-validate": "^4.8.6",
+    "vue-easy-lightbox": "^1.16.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.4",
@@ -42,12 +43,12 @@
     "@nuxtjs/plausible": "^0.2.0",
     "@nuxtjs/supabase": "0.3.5",
     "@nuxtjs/tailwindcss": "^6.6.6",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "@vitest/coverage-c8": "^0.30.0",
-    "@vueuse/nuxt": "^10.0.0",
+    "@vueuse/nuxt": "^10.0.2",
     "consola": "^3.0.2",
-    "cypress": "^12.9.0",
+    "cypress": "^12.10.0",
     "dayjs": "^1.11.7",
     "eslint": "^8.38.0",
     "jsdom": "^21.1.1",
