--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.9",
     "@sendgrid/mail": "^7.7.0",
-    "@vueuse/core": "^10.0.2",
+    "@vernaillen/nuxt-base-layer": "^0.1.18",
+    "@vueuse/core": "^10.1.0",
     "animate.css": "^4.1.1",
-    "iframe-resizer": "^4.3.6",
     "vee-validate": "^4.8.6",
     "vue-easy-lightbox": "^1.16.0",
     "yup": "^1.1.1"
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.5",
     "@nuxt/content": "^2.6.0",
-    "@nuxt/devtools": "^0.4.1",
+    "@nuxt/devtools": "^0.4.2",
     "@nuxt/image-edge": "1.0.0-28020728.5df24eb",
     "@nuxt/test-utils": "^3.4.2",
     "@nuxtjs/google-fonts": "3.0.0",
@@ -44,12 +44,12 @@
     "@nuxtjs/tailwindcss": "^6.6.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "@vitest/coverage-c8": "^0.30.0",
-    "@vueuse/nuxt": "^10.0.2",
+    "@vitest/coverage-c8": "^0.30.1",
+    "@vueuse/nuxt": "^10.1.0",
     "consola": "^3.1.0",
     "cypress": "^12.10.0",
     "dayjs": "^1.11.7",
-    "eslint": "^8.38.0",
+    "eslint": "^8.39.0",
     "jsdom": "^21.1.1",
     "nuxt": "3.4.2",
     "nuxt-icon": "^0.3.3",
@@ -58,7 +58,7 @@
     "sitemap": "^7.1.1",
     "start-server-and-test": "^2.0.0",
     "typescript": "^5.0.4",
-    "vitest": "^0.30.0"
+    "vitest": "^0.30.1"
   },
   "eslintConfig": {
     "extends": "@antfu"
