--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.38.6",
     "@nuxt/content": "^2.6.0",
     "@nuxt/devtools": "^0.4.5",
     "@nuxt/image-edge": "1.0.0-28050764.aaee7ac",
     "@nuxt/test-utils": "^3.4.2",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/google-fonts": "3.0.0",
     "@nuxtjs/i18n": "8.0.0-beta.11",
     "@nuxtjs/plausible": "^0.2.0",
