--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,10 @@ node_modules
 .cache
 .output
 .env
+.env.development.local
 .netlify
 dist
 coverage/
 cypress/screenshots/
 cypress/cache/
+.vercel
