--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@sendgrid/mail": "^7.7.0",
     "@upstash/redis": "^1.20.6",
     "@vercel/kv": "^0.1.1",
+    "@vercel/postgres": "^0.1.3",
+    "@vercel/postgres-kysely": "^0.1.3",
     "@vernaillen/nuxt-base-layer": "^0.1.26",
     "@vueuse/core": "^10.1.2",
     "animate.css": "^4.1.1",
