--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@pinia/nuxt": "^0.4.9",
     "@sendgrid/mail": "^7.7.0",
     "@upstash/redis": "^1.20.6",
+    "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.1.1",
     "@vercel/postgres": "^0.1.3",
     "@vercel/postgres-kysely": "^0.1.3",
