--- a/package.json
+++ b/package.json
@@ -22,44 +22,44 @@
   "dependencies": {
     "@mollie/api-client": "^3.7.0",
     "@nuxtjs/axios": "^5.13.6",
-    "@pinia/nuxt": "^0.4.9",
+    "@pinia/nuxt": "^0.4.11",
     "@sendgrid/mail": "^7.7.0",
-    "@upstash/redis": "^1.20.6",
-    "@vernaillen/nuxt-base-layer": "^0.1.26",
+    "@upstash/redis": "^1.21.0",
+    "@vernaillen/nuxt-base-layer": "^0.1.29",
     "@vueuse/core": "^10.1.2",
     "animate.css": "^4.1.1",
-    "vee-validate": "^4.8.6",
+    "vee-validate": "^4.9.6",
     "vue-easy-lightbox": "^1.16.0",
-    "yup": "^1.1.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@nuxt/content": "^2.6.0",
-    "@nuxt/devtools": "^0.5.0",
-    "@nuxt/image-edge": "1.0.0-28059208.2abef1b",
-    "@nuxt/test-utils": "^3.4.2",
+    "@nuxt/devtools": "^0.5.5",
+    "@nuxt/image-edge": "1.0.0-rc.1-28106434.299e03e",
+    "@nuxt/test-utils": "^3.5.3",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/google-fonts": "3.0.1",
     "@nuxtjs/i18n": "8.0.0-beta.12",
-    "@nuxtjs/plausible": "^0.2.0",
-    "@nuxtjs/supabase": "0.3.5",
-    "@nuxtjs/tailwindcss": "^6.6.6",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "@vitest/coverage-c8": "^0.31.0",
+    "@nuxtjs/plausible": "^0.2.1",
+    "@nuxtjs/supabase": "0.3.6",
+    "@nuxtjs/tailwindcss": "^6.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "@vitest/coverage-c8": "^0.32.0",
     "@vueuse/nuxt": "^10.1.2",
     "consola": "^3.1.0",
-    "cypress": "^12.10.0",
-    "dayjs": "^1.11.7",
-    "eslint": "^8.40.0",
-    "jsdom": "^22.0.0",
-    "nuxt": "3.5.1",
-    "nuxt-icon": "^0.4.0",
-    "remark-breaks": "^3.0.2",
+    "cypress": "^12.14.0",
+    "dayjs": "^1.11.8",
+    "eslint": "^8.42.0",
+    "jsdom": "^22.1.0",
+    "nuxt": "3.5.3",
+    "nuxt-icon": "^0.4.1",
+    "remark-breaks": "^3.0.3",
     "remark-directive-rehype": "^0.4.2",
     "sitemap": "^7.1.1",
     "start-server-and-test": "^2.0.0",
-    "typescript": "^5.0.4",
-    "vitest": "^0.31.0"
+    "typescript": "^5.1.3",
+    "vitest": "^0.32.0"
   },
   "packageManager": "pnpm@8.5.1"
 }
