--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
+          name: Check pnpm version
+          command: pnpm -v
+      - run:
           name: Install packages
           command: pnpm install --no-frozen-lockfile
       - save_cache:
