--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@nuxtjs/tailwindcss": "^6.7.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
-    "@vitest/coverage-c8": "^0.32.0",
+    "@vitest/coverage-v8": "^0.32.0",
     "@vueuse/nuxt": "^10.1.2",
     "consola": "^3.1.0",
     "cypress": "^12.14.0",
