--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 executors:
   pnpm-executor:
     docker:
-      - image: cimg/node:20.3.0-browsers
+      - image: vernaillen/circleci-pnpm:20.3.0-browsers
     working_directory: /tmp/workspace
 
 jobs:
