--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "harmonics",
   "version": "2.4.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -36,7 +37,7 @@
     "@nuxt/content": "^2.6.0",
     "@nuxt/devtools": "^0.5.5",
     "@nuxt/image-edge": "1.0.0-rc.1-28106434.299e03e",
-    "@nuxt/test-utils": "^3.5.3",
+    "@nuxt/test-utils-edge": "3.6.0-28108658.05a8c2d9",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/google-fonts": "3.0.1",
     "@nuxtjs/i18n": "8.0.0-beta.12",
@@ -61,5 +62,5 @@
     "typescript": "^5.1.3",
     "vitest": "^0.32.0"
   },
-  "packageManager": "pnpm@8.6.1"
+  "packageManager": "pnpm@8.4.0"
 }
