--- a/package.json
+++ b/package.json
@@ -26,41 +26,40 @@
     "@pinia/nuxt": "^0.4.11",
     "@sendgrid/mail": "^7.7.0",
     "@upstash/redis": "^1.21.0",
-    "@vernaillen/nuxt-base-layer": "^0.1.29",
-    "@vueuse/core": "^10.1.2",
+    "@vernaillen/nuxt-base-layer": "^0.2.3",
+    "@vueuse/core": "^10.2.0",
     "animate.css": "^4.1.1",
-    "vee-validate": "^4.9.6",
+    "vee-validate": "^4.10.0",
     "vue-easy-lightbox": "^1.16.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.6.0",
-    "@nuxt/devtools": "^0.5.5",
-    "@nuxt/image-edge": "1.0.0-rc.1-28106434.299e03e",
-    "@nuxt/test-utils-edge": "3.6.0-28108658.05a8c2d9",
+    "@nuxt/content": "^2.7.0",
+    "@nuxt/devtools": "^0.6.2",
+    "@nuxt/image": "1.0.0-rc.1",
+    "@nuxt/test-utils": "^3.6.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/google-fonts": "3.0.1",
     "@nuxtjs/i18n": "8.0.0-beta.12",
     "@nuxtjs/plausible": "^0.2.1",
-    "@nuxtjs/supabase": "0.3.6",
-    "@nuxtjs/tailwindcss": "^6.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "@vitest/coverage-v8": "^0.32.0",
-    "@vueuse/nuxt": "^10.1.2",
+    "@nuxtjs/supabase": "0.3.7",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "@vitest/coverage-v8": "^0.32.2",
+    "@vueuse/nuxt": "^10.2.0",
     "consola": "^3.1.0",
-    "cypress": "^12.14.0",
+    "cypress": "^12.15.0",
     "dayjs": "^1.11.8",
-    "eslint": "^8.42.0",
+    "eslint": "^8.43.0",
     "jsdom": "^22.1.0",
-    "nuxt": "3.5.3",
+    "nuxt": "3.6.0",
     "nuxt-icon": "^0.4.1",
     "remark-breaks": "^3.0.3",
     "remark-directive-rehype": "^0.4.2",
     "sitemap": "^7.1.1",
     "start-server-and-test": "^2.0.0",
     "typescript": "^5.1.3",
-    "vitest": "^0.32.0"
-  },
-  "packageManager": "pnpm@8.4.0"
+    "vitest": "^0.32.2"
+  }
 }
