change Sonar project name to harmonics-website

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=harmonics-website
-sonar.projectName=Harmonics.be
+sonar.projectName=Harmonics-website
 sonar.projectVersion=2.4
 sonar.organization=vernaillen
 
