--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "cypress": "^12.16.0",
     "dayjs": "^1.11.9",
     "eslint": "^8.44.0",
+    "happy-dom": "^10.0.3",
     "jsdom": "^22.1.0",
     "nuxt": "3.6.2",
     "nuxt-icon": "^0.4.2",
+    "nuxt-vitest": "^0.9.0",
     "remark-breaks": "^3.0.3",
     "remark-directive-rehype": "^0.4.2",
     "sitemap": "^7.1.1",
