--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
             - ./node_modules
       - run:
           name: Build
-          command: pnpm run generate
+          command: pnpm run build
       - sonarcloud/scan
       - persist_to_workspace:
           root: .
