--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.11",
-    "@vernaillen/nuxt-base-layer": "^0.2.17",
-    "@vueuse/core": "^10.3.0",
+    "@vernaillen/nuxt-base-layer": "^0.2.18",
+    "@vueuse/core": "^10.4.0",
     "animate.css": "^4.1.1",
-    "vee-validate": "^4.11.2",
+    "vee-validate": "^4.11.3",
     "vue-easy-lightbox": "^1.16.0",
     "yup": "^1.2.0"
   },
@@ -34,30 +34,33 @@
     "@nuxt/content": "^2.7.2",
     "@nuxt/devtools": "^0.8.0",
     "@nuxt/image": "1.0.0-rc.1",
-    "@nuxt/test-utils": "^3.6.5",
+    "@nuxt/test-utils": "^3.7.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/google-fonts": "3.0.2",
     "@nuxtjs/i18n": "8.0.0-rc.3",
     "@nuxtjs/plausible": "^0.2.1",
     "@nuxtjs/tailwindcss": "^6.8.0",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
-    "@vitest/coverage-v8": "^0.34.2",
-    "@vueuse/nuxt": "^10.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "@vitest/coverage-v8": "^0.34.3",
+    "@vueuse/nuxt": "^10.4.0",
     "consola": "^3.2.3",
     "cypress": "^12.17.4",
     "dayjs": "^1.11.9",
-    "eslint": "^8.47.0",
-    "happy-dom": "^10.10.4",
+    "eslint": "^8.48.0",
+    "happy-dom": "^10.11.0",
     "jsdom": "^22.1.0",
-    "nuxt": "3.6.5",
+    "nuxt": "3.7.0",
     "nuxt-icon": "^0.5.0",
     "nuxt-vitest": "^0.10.2",
     "remark-breaks": "^3.0.3",
     "remark-directive-rehype": "^0.4.2",
     "sitemap": "^7.1.1",
     "start-server-and-test": "^2.0.0",
-    "typescript": "^5.1.6",
-    "vitest": "^0.34.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.3"
+  },
+  "resolutions": {
+    "micromark": "3.2.0"
   }
 }
