--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nuxtjs/critters": "^0.5.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "8.0.0-rc.3",
+    "@nuxtjs/plausible": "^0.2.1",
     "@types/node": "^20.5.9",
     "@vernaillen/nuxt-base-layer": "^0.2.19",
     "@vitest/coverage-v8": "^0.34.3",
@@ -60,7 +61,7 @@
     "vitest": "0.33.0"
   },
   "dependencies": {
-    "@twicpics/components": "^0.22.0",
+    "@twicpics/components": "^0.22.1",
     "resend": "^1.0.0",
     "vue-easy-lightbox": "^1.16.0",
     "yup": "^1.2.0"
