--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "harmonics.be",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/vernaillen/harmonics.be.git"
+    "url": "https://github.com/vernaillen/harmonics-website.git"
   },
   "scripts": {
     "build": "nuxt build",
@@ -37,21 +37,21 @@
     "@nuxt/content": "^2.8.2",
     "@nuxt/devtools": "^0.8.3",
     "@nuxt/image": "^1.0.0-rc.1",
-    "@nuxthq/studio": "^0.14.0",
-    "@nuxthq/ui": "^2.7.0",
+    "@nuxt/ui": "^2.8.0",
+    "@nuxthq/studio": "^0.14.1",
     "@nuxtjs/critters": "^0.5.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "8.0.0-rc.3",
     "@nuxtjs/plausible": "^0.2.1",
     "@types/node": "^20.5.9",
-    "@vernaillen/nuxt-base-layer": "^0.2.19",
+    "@vernaillen/nuxt-base-layer": "^0.2.20",
     "@vitest/coverage-v8": "^0.34.3",
     "@vueuse/nuxt": "^10.4.1",
     "cssnano": "^6.0.1",
     "cypress": "^13.1.0",
     "dayjs": "^1.11.9",
     "eslint": "^8.48.0",
-    "happy-dom": "^11.0.1",
+    "happy-dom": "10.0.0",
     "nuxt": "^3.7.1",
     "nuxt-og-image": "^2.0.25",
     "nuxt-time": "^0.1.1",
@@ -63,6 +63,7 @@
   "dependencies": {
     "@twicpics/components": "^0.22.1",
     "resend": "^1.0.0",
+    "valibot": "^0.13.1",
     "vue-easy-lightbox": "^1.16.0",
     "yup": "^1.2.0"
   },
