run e2e tests in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,7 @@ workflows:
             - test
           filters:
             branches:
-              only: main
+              only: master
           context: 
             - Slack
 
