--- a/package.json
+++ b/package.json
@@ -36,32 +36,32 @@
     "@iconify-json/simple-icons": "^1.1.70",
     "@nuxt/content": "^2.8.2",
     "@nuxt/devtools": "^0.8.3",
-    "@nuxt/image": "^1.0.0-rc.1",
+    "@nuxt/image": "1.0.0-rc.1",
     "@nuxt/ui": "^2.8.1",
     "@nuxthq/studio": "^0.14.1",
     "@nuxtjs/critters": "^0.5.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge",
+    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.4-28240475.595f9ca",
     "@nuxtjs/plausible": "^0.2.3",
     "@types/node": "^20.6.0",
     "@vernaillen/nuxt-base-layer": "^0.2.20",
     "@vitest/coverage-v8": "^0.34.4",
     "@vueuse/nuxt": "^10.4.1",
     "cssnano": "^6.0.1",
-    "cypress": "^13.1.0",
+    "cypress": "^13.2.0",
     "dayjs": "^1.11.9",
     "eslint": "^8.49.0",
-    "happy-dom": "^11.0.2",
-    "nuxt": "^3.7.1",
+    "happy-dom": "^11.0.5",
+    "nuxt": "^3.7.2",
     "nuxt-og-image": "^2.0.26",
     "nuxt-time": "^0.1.1",
-    "nuxt-vitest": "^0.10.4",
+    "nuxt-vitest": "^0.10.5",
     "remark-breaks": "^3.0.3",
     "start-server-and-test": "^2.0.0",
     "vitest": "0.33.0"
   },
   "dependencies": {
-    "@twicpics/components": "^0.22.1",
+    "@twicpics/components": "^0.22.2",
     "resend": "^1.0.0",
     "vue-easy-lightbox": "^1.16.0",
     "yup": "^1.2.0"
