--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@iconify-json/noto": "^1.1.12",
     "@iconify-json/ph": "^1.1.6",
     "@iconify-json/simple-icons": "^1.1.70",
-    "@nuxt/content": "^2.8.2",
+    "@nuxt/content": "npm:@nuxt/content-edge@latest",
     "@nuxt/devtools": "^0.8.3",
     "@nuxt/image": "1.0.0-rc.1",
     "@nuxt/ui": "^2.8.1",
@@ -51,14 +51,14 @@
     "cypress": "^13.2.0",
     "dayjs": "^1.11.9",
     "eslint": "^8.49.0",
-    "happy-dom": "^11.0.5",
+    "happy-dom": "^11.0.6",
     "nuxt": "^3.7.2",
     "nuxt-og-image": "^2.0.26",
     "nuxt-time": "^0.1.1",
     "nuxt-vitest": "^0.10.5",
     "remark-breaks": "^3.0.3",
     "start-server-and-test": "^2.0.0",
-    "vitest": "0.33.0"
+    "vitest": "0.34.4"
   },
   "dependencies": {
     "@twicpics/components": "^0.22.2",
