--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@dargmuesli/nuxt-cookie-control": "^6.4.3",
+    "@dargmuesli/nuxt-cookie-control": "^6.4.4",
     "@iconify-json/circle-flags": "^1.1.41",
     "@iconify-json/logos": "^1.1.37",
     "@iconify-json/mdi": "^1.1.54",
     "@iconify-json/noto": "^1.1.12",
     "@iconify-json/ph": "^1.1.6",
-    "@iconify-json/simple-icons": "^1.1.71",
-    "@nuxt/content": "npm:@nuxt/content-edge@latest",
+    "@iconify-json/simple-icons": "^1.1.72",
+    "@nuxt/content": "^2.8.3",
     "@nuxt/devtools": "^0.8.4",
     "@nuxt/image": "1.0.0-rc.2",
     "@nuxt/ui": "^2.8.1",
@@ -43,7 +43,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.4-28240475.595f9ca",
     "@nuxtjs/plausible": "^0.2.3",
-    "@types/node": "^20.6.3",
+    "@types/node": "^20.7.0",
     "@vernaillen/nuxt-base-layer": "^0.2.20",
     "@vitest/coverage-v8": "^0.34.4",
     "@vueuse/nuxt": "^10.4.1",
@@ -52,19 +52,19 @@
     "dayjs": "^1.11.10",
     "eslint": "^8.49.0",
     "happy-dom": "11.2.0",
-    "nuxt": "^3.7.3",
+    "nuxt": "^3.7.4",
     "nuxt-og-image": "^2.0.28",
     "nuxt-time": "^0.1.1",
     "nuxt-vitest": "^0.10.5",
-    "remark-breaks": "^3.0.3",
+    "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.0",
     "vitest": "0.33.0"
   },
   "dependencies": {
-    "@twicpics/components": "^0.22.3",
+    "@twicpics/components": "^0.23.0",
     "resend": "^1.1.0",
     "vue-easy-lightbox": "^1.16.0",
-    "yup": "^1.2.0"
+    "yup": "^1.3.1"
   },
   "engines": {
     "node": ">=18",
