--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,7 +6,7 @@
   "assignees": [
     "vernaillen"
   ],
-  "packageRules": [,
+  "packageRules": [
     {
       "matchDatasources": [
         "docker"
