update allowedVersions to 18.18

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,7 +14,7 @@
       "matchPackageNames": [
         "cimg/node"
       ],
-      "allowedVersions": "<=18.18-browsers"
+      "allowedVersions": "<=18.18"
     }
   ]
 }
