chore: package updates

--- a/package.json
+++ b/package.json
@@ -27,37 +27,37 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify-json/circle-flags": "^1.1.45",
-    "@iconify-json/logos": "^1.1.40",
-    "@iconify-json/mdi": "^1.1.60",
-    "@iconify-json/noto": "^1.1.17",
-    "@iconify-json/ph": "^1.1.8",
-    "@iconify-json/simple-icons": "^1.1.81",
+    "@iconify-json/circle-flags": "^1.1.46",
+    "@iconify-json/logos": "^1.1.41",
+    "@iconify-json/mdi": "^1.1.61",
+    "@iconify-json/noto": "^1.1.18",
+    "@iconify-json/ph": "^1.1.9",
+    "@iconify-json/simple-icons": "^1.1.84",
     "@nuxt/content": "^2.9.0",
     "@nuxt/devtools": "1.0.5",
     "@nuxt/image": "1.1.0",
     "@nuxt/test-utils": "^3.8.1",
-    "@nuxt/ui": "^2.11.0",
+    "@nuxt/ui": "^2.11.1",
     "@nuxthq/studio": "^1.0.5",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "8.0.0-rc.8",
+    "@nuxtjs/i18n": "8.0.0-rc.9",
     "@nuxtjs/plausible": "^0.2.3",
     "@types/node": "^20.10.2",
     "@vernaillen/nuxt-base-layer": "^0.2.21",
-    "@vitest/coverage-v8": "1.0.3",
+    "@vitest/coverage-v8": "1.0.4",
     "@vueuse/nuxt": "^10.6.1",
     "cssnano": "^6.0.1",
     "cypress": "^13.6.0",
     "dayjs": "^1.11.10",
     "eslint": "^8.55.0",
     "happy-dom": "12.10.3",
-    "nuxt": "^3.8.2",    
-    "nuxt-og-image": "^2.2.4",
+    "nuxt": "^3.8.2",
+    "nuxt-og-image": "3.0.0-rc.9",
     "nuxt-time": "^0.1.1",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.3",
-    "vitest": "^1.0.2"
+    "vitest": "^1.0.4"
   },
   "dependencies": {
     "@twicpics/components": "^0.26.0",
