chore: update dependencies -

--- a/package.json
+++ b/package.json
@@ -33,23 +33,23 @@
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/noto": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
-    "@iconify-json/simple-icons": "^1.2.23",
+    "@iconify-json/simple-icons": "^1.2.24",
     "@nuxt/content": "https://pkg.pr.new/@nuxt/content@b4e7dec",
-    "@nuxt/devtools": "2.0.0-beta.4",
-    "@nuxt/eslint": "1.0.0",
+    "@nuxt/devtools": "2.0.0",
+    "@nuxt/eslint": "1.0.1",
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/image": "^1.9.0",
     "@nuxt/test-utils": "^3.15.4",
     "@nuxt/ui": "^2.21.0",
     "@nuxtjs/critters": "^0.8.0",
-    "@nuxtjs/i18n": "9.1.5",
+    "@nuxtjs/i18n": "9.2.0",
     "@nuxtjs/plausible": "^1.2.0",
     "@nuxtjs/seo": "2.1.1",
     "@nuxtjs/sitemap": "7.2.4",
-    "@vitest/coverage-v8": "^3.0.4",
+    "@vitest/coverage-v8": "^3.0.5",
     "@vueuse/nuxt": "^12.5.0",
     "cssnano": "^7.0.6",
-    "cypress": "^14.0.1",
+    "cypress": "^14.0.2",
     "dayjs": "^1.11.13",
     "nuxt": "^3.15.4",
     "nuxt-og-image": "4.1.2",
@@ -57,13 +57,13 @@
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.10",
     "vite-plugin-eslint2": "^5.0.3",
-    "vitest": "^3.0.4"
+    "vitest": "^3.0.5"
   },
   "dependencies": {
     "@nuxt/ui-pro": "^1.7.0",
-    "@twicpics/components": "^0.31.2",
-    "@vercel/speed-insights": "^1.1.0",
-    "resend": "^4.1.1",
+    "@twicpics/components": "^0.31.3",
+    "@vercel/speed-insights": "^1.2.0",
+    "resend": "^4.1.2",
     "vue-easy-lightbox": "^1.19.0",
     "vue3-lazyload": "^0.3.8",
     "yup": "^1.6.1"
